# cpputil

./: .gitignore  CMakeLists.txt  README.md
src/cpputil/: io.cpp  io.hpp  util.hpp
src/fn/: CMakeLists.txt
src/fn/cpputil/: function_ref.cpp  function_ref.hpp
src/input/: CMakeLists.txt  README.md
src/input/cpputil/: input.cpp  input.hpp
src/io/: CMakeLists.txt  README.md
src/io/cpputil/: io.cpp  io.hpp
src/json/: CMakeLists.txt  README.md
src/json/cpputil/: json.cpp  json.hpp
src/json/cpputil/json/: decode.cpp  decode.hpp  encode.hpp  format.hpp
src/mem/: CMakeLists.txt
src/mem/cpputil/mem/: stable_string_pool.cpp  stable_string_pool.hpp  unstable_string_pool.cpp  unstable_string_pool.hpp
src/num/: CMakeLists.txt
src/num/cpputil/: num.cpp  num.hpp
src/util/: CMakeLists.txt  README.md
src/util/cpputil/: util.cpp  util.hpp
tests/: CMakeLists.txt
tests/fn/: CMakeLists.txt  function_ref.test.cpp
tests/json/: CMakeLists.txt  decode.test.cpp  encode.test.cpp
tests/mem/: CMakeLists.txt  stable_string_pool.test.cpp  unstable_string_pool.test.cpp
